--- a/app/src/main/res/layout/activity_pet_health.xml
+++ b/app/src/main/res/layout/activity_pet_health.xml
@@ -44,13 +44,12 @@
                         app:layout_constraintTop_toTopOf="parent">
 
 
-
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="25dp"
                             android:layout_marginBottom="25dp"
-                            android:text="Zdrowie pupila: "
+                            android:text="Opieka nad pupilem: "
                             android:textColor="#014D70"
                             android:textSize="20sp"
                             android:textStyle="bold" />
