--- a/app/src/main/res/layout/rodents_item_list.xml
+++ b/app/src/main/res/layout/rodents_item_list.xml
@@ -130,7 +130,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Zdrowie"
+                android:text="Opieka"
                 android:textAlignment="center"
                 android:textColor="#014D70"
                 android:textColorHint="#77147A"
