--- a/app/src/main/res/layout/weight_list.xml
+++ b/app/src/main/res/layout/weight_list.xml
@@ -33,7 +33,8 @@
                     android:id="@+id/textViewWeight_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="left"
                     android:text="Waga"
                     android:textColor="#014D70"
@@ -43,6 +44,7 @@
                     android:id="@+id/textView10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
                     android:layout_marginTop="6dp"
                     android:layout_weight="1"
                     android:text="g"
