--- a/app/src/main/res/layout/add_rodent.xml
+++ b/app/src/main/res/layout/add_rodent.xml
@@ -116,16 +116,32 @@
         </LinearLayout>
 
 
-        <EditText
-            android:id="@+id/editTextEditName"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:ems="10"
-            android:hint="Imię twojego pupila"
-            android:maxLength="50"
-            android:textColor="#014D70"
-            android:textColorHint="#014D70" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewRequired_rodent1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="*"
+                android:textColor="#E12222"
+                android:textSize="18sp"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/editTextEditName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:ems="10"
+                android:hint="Imię twojego pupila"
+                android:maxLength="50"
+                android:textColor="#014D70"
+                android:textColorHint="#014D70" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -164,6 +180,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewRequired_rodent2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="*"
+                android:textColor="#E12222"
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/textViewDate"
