--- a/app/src/main/res/layout/vets_item_list.xml
+++ b/app/src/main/res/layout/vets_item_list.xml
@@ -82,26 +82,40 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/editTextPhone_vet"
-                    android:layout_width="305dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:hint="Telefon"
-                    android:inputType="number"
-                    android:maxLength="16"
-                    android:textColor="#014D70"
-                    android:textSize="24sp" />
-
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_margin="8dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:backgroundTint="#448F33"
-                    app:srcCompat="@android:drawable/stat_sys_speakerphone"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/editTextPhone_vet"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:hint="Telefon"
+                        android:inputType="number"
+                        android:maxLength="16"
+                        android:textColor="#014D70"
+                        android:textSize="24sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="top"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:background="@drawable/roundbutton_small_green"
+                        android:padding="15dp"
+                        app:srcCompat="@android:drawable/stat_sys_speakerphone"
+                        tools:ignore="SpeakableTextPresentCheck" />
+                </LinearLayout>
 
             </LinearLayout>
 
