Download database from VPS (prototype)

--- a/app/src/main/res/layout/activity_encyclopedia.xml
+++ b/app/src/main/res/layout/activity_encyclopedia.xml
@@ -173,7 +173,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="Pokarm"
+                                    android:text="Smakołyki"
                                     android:textAlignment="center"
                                     android:textColor="#014D70" />
 
