--- a/app/src/main/res/layout/activity_encyclopedia.xml
+++ b/app/src/main/res/layout/activity_encyclopedia.xml
@@ -34,12 +34,40 @@
                     tools:context=".ROOM.Medicaments.ViewMedicaments">
 
 
+                    <ProgressBar
+                        android:id="@+id/progressBar_encyclopedia"
+                        style="@android:style/Widget.Material.Light.ProgressBar.Large"
+                        android:layout_width="fill_parent"
+                        android:layout_height="100dp"
+                        android:layout_marginTop="40dp"
+                        android:layout_weight="1"
+                        android:indeterminateTint="#0375a8"
+                        android:visibility="gone">
+
+                    </ProgressBar>
+
+                    <TextView
+                        android:id="@+id/textViewProgress_encyclopedia"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginBottom="25dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Ładowanie..."
+                        android:textColor="#014D70"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:visibility="gone" />
+
                     <LinearLayout
+                        android:id="@+id/linearLayout_encyclopedia"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="#ACC5E1"
                         android:gravity="center_horizontal"
                         android:orientation="vertical"
+                        android:visibility="visible"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
