--- a/app/src/main/res/layout/treats.xml
+++ b/app/src/main/res/layout/treats.xml
@@ -30,19 +30,46 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    tools:context=".ROOM.Medicaments.ViewMedicaments">
+                    android:orientation="vertical">
 
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabLayout_treats"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:animationCache="true"
-                        app:tabInlineLabel="false" />
+                        android:orientation="horizontal">
+
+                        <View
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="#0375a8" />
+
+                        <com.google.android.material.tabs.TabLayout
+                            android:id="@+id/tabLayout_treats"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+
+                            android:animationCache="true"
+                            app:tabBackground="@drawable/tablayout_design"
+
+                            app:tabIconTint="@null"
+                            app:tabIndicatorColor="@color/white"
+                            app:tabIndicatorHeight="4dp"
+
+                            app:tabInlineLabel="false"
+                            app:tabSelectedTextColor="@color/white" />
+
+                        <View
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="#0375a8" />
+                    </LinearLayout>
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/pager"
                         android:layout_width="match_parent"
+
                         android:layout_height="0dp"
                         android:layout_weight="1" />
 
