--- a/app/src/main/res/layout/treats_list.xml
+++ b/app/src/main/res/layout/treats_list.xml
@@ -95,7 +95,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Opis" />
+                    android:text="Opis"
+                    android:textColor="#5C5C5C" />
 
             </LinearLayout>
 
@@ -103,6 +104,7 @@
 
 
         <View
+            android:id="@+id/view_treats"
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:layout_marginLeft="30dp"
