Cage Supply table

--- a/app/src/main/res/layout/treats_list.xml
+++ b/app/src/main/res/layout/treats_list.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".ROOM.Rodent.AddRodents">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/linearLayout_treats"
@@ -26,7 +25,7 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:orientation="horizontal">
 
@@ -47,7 +46,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
 
-                        android:layout_margin="10dp"
+                        android:layout_margin="3dp"
                         android:adjustViewBounds="true"
                         android:background="@drawable/rounded_image_view"
                         android:cropToPadding="true"
@@ -73,8 +72,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
                 android:gravity="top"
@@ -84,7 +83,8 @@
                     android:id="@+id/textViewName_treats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:gravity="left"
                     android:text="Nazwa"
                     android:textColor="#014D70"
@@ -94,7 +94,7 @@
                     android:id="@+id/textViewDesc_treats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="10dp"
                     android:text="Opis"
                     android:textColor="#5C5C5C" />
 
