--- a/app/src/main/res/layout/treats.xml
+++ b/app/src/main/res/layout/treats.xml
@@ -66,14 +66,92 @@
                             android:background="#0375a8" />
                     </LinearLayout>
 
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginTop="10dp"
+                                android:tint="#0375a8"
+                                app:srcCompat="@drawable/ic_info" />
+
+                            <TextView
+                                android:id="@+id/textViewInfo_encyclopedia"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginRight="20dp"
+                                android:layout_marginBottom="10dp"
+                                android:text="Info"
+                                android:textColor="#014D70"
+                                android:textSize="16sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <androidx.cardview.widget.CardView
+                                android:layout_width="300px"
+                                android:layout_height="404px"
+                                android:layout_centerVertical="true"
+                                android:elevation="32dp"
+                                android:gravity="center"
+
+                                app:cardBackgroundColor="#A31A1A"
+                                app:cardCornerRadius="20dp"
+                                app:cardElevation="5dp">
+
+
+                                <ImageView
+                                    android:id="@+id/imageView_encyclopedia"
+                                    android:layout_width="300px"
+                                    android:layout_height="404px"
+                                    android:layout_gravity="center"
+                                    android:adjustViewBounds="true"
+
+                                    android:background="@drawable/rounded_image_view"
+                                    android:cropToPadding="true"
+                                    android:scaleType="centerCrop"
+                                    android:src="@android:drawable/ic_menu_camera"
+                                    android:visibility="visible" />
+                            </androidx.cardview.widget.CardView>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/pager"
                         android:layout_width="match_parent"
 
                         android:layout_height="0dp"
                         android:layout_weight="1" />
-
-
 
 
 
