--- a/app/src/main/res/layout/treats_list.xml
+++ b/app/src/main/res/layout/treats_list.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/linearLayout_treats"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#ACC5E1"
         android:gravity="center_horizontal"
         android:orientation="vertical"
@@ -18,14 +18,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_marginTop="5dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_marginLeft="30dp"
                 android:orientation="horizontal">
 
@@ -73,7 +73,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_marginRight="30dp"
                 android:layout_weight="1"
                 android:gravity="top"
