--- a/app/src/main/res/layout/treats.xml
+++ b/app/src/main/res/layout/treats.xml
@@ -103,19 +103,22 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/linearLayout_encyclopedia"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="10dp"
                             android:gravity="center"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:visibility="gone">
 
                             <androidx.cardview.widget.CardView
+                                android:id="@+id/cardView_encyclopedia"
                                 android:layout_width="300px"
                                 android:layout_height="404px"
                                 android:layout_centerVertical="true"
                                 android:elevation="32dp"
-                                android:gravity="center"
 
+                                android:gravity="center"
                                 app:cardBackgroundColor="#A31A1A"
                                 app:cardCornerRadius="20dp"
                                 app:cardElevation="5dp">
@@ -131,8 +134,7 @@
                                     android:background="@drawable/rounded_image_view"
                                     android:cropToPadding="true"
                                     android:scaleType="centerCrop"
-                                    android:src="@android:drawable/ic_menu_camera"
-                                    android:visibility="visible" />
+                                    android:src="@android:drawable/ic_menu_camera" />
                             </androidx.cardview.widget.CardView>
 
                         </LinearLayout>
