--- a/app/src/main/res/layout/fragment_encyclopedia_tab.xml
+++ b/app/src/main/res/layout/fragment_encyclopedia_tab.xml
@@ -10,7 +10,8 @@
         android:id="@+id/textViewTreats"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:textColor="#37474F" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_treats"
