--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -171,7 +171,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="Panel powiadomień"
+                                    android:text="Panel powiadomień (beta)"
                                     android:textColor="#014D70" />
 
                             </LinearLayout>
