--- a/app/src/main/res/layout/activity_rodent_edit.xml
+++ b/app/src/main/res/layout/activity_rodent_edit.xml
@@ -43,6 +43,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:buttonTint="#0375a8"
                         android:text="Samiec" />
 
                     <RadioButton
@@ -50,6 +51,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:buttonTint="#0375a8"
                         android:text="Samica" />
 
                 </RadioGroup>
