--- a/app/src/main/res/layout/medicaments_item_list.xml
+++ b/app/src/main/res/layout/medicaments_item_list.xml
@@ -203,6 +203,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:buttonTint="#0375a8"
             android:text="Przypisać lekarstwo do konkretnego pupila?"
             android:textColor="#014D70"
             android:textSize="16sp" />
