--- a/app/src/main/res/layout/visits_item_list.xml
+++ b/app/src/main/res/layout/visits_item_list.xml
@@ -185,6 +185,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:buttonTint="#0375a8"
             android:text="Przypisać weterynarza z listy do wizyty?"
             android:textColor="#014D70"
             android:textSize="16sp" />
@@ -201,6 +202,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:buttonTint="#0375a8"
             android:text="Przypisać zwierzę do wizyty?"
             android:textColor="#014D70"
             android:textSize="16sp" />
@@ -217,6 +219,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:buttonTint="#0375a8"
             android:text="Ustawić przypomnienie o wizycie?"
             android:textColor="#014D70"
             android:textSize="16sp" />
