--- a/app/src/main/res/layout/vet_map.xml
+++ b/app/src/main/res/layout/vet_map.xml
@@ -43,10 +43,26 @@
                 android:layout_marginRight="6dp"
                 android:layout_marginBottom="2dp"
                 android:background="#048FCD" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonLoadMap_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:onClick="loadMap"
+                android:text="Załaduj mapę"
+                android:textSize="20sp"
+                android:visibility="gone"
+                app:backgroundTint="#5397DF"
+                app:strokeColor="#0375a8"
+                app:strokeWidth="3dp" />
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/linearLayoutMap_map"
             android:layout_width="match_parent"
             android:layout_height="360dp"
             android:layout_weight="1"
