--- a/app/src/main/res/layout/visits_item_list.xml
+++ b/app/src/main/res/layout/visits_item_list.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:gravity="left"
-            android:text="Data wizyty"
+            android:text="Ustaw..."
             android:textColor="#014D70"
             android:textSize="20sp" />
 
@@ -70,11 +70,12 @@
             android:layout_marginBottom="10dp"
             android:gravity="left"
             android:onClick="onClickTime"
-            android:text="Godzina wizyty"
+            android:text="Ustaw..."
             android:textColor="#014D70"
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/textViewReasonInfo_visit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -87,7 +88,8 @@
             android:id="@+id/editTextReason_visit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:hint="Cel wizyty"
             android:maxLines="3"
             android:textColor="#014D70"
@@ -180,6 +182,18 @@
             android:textColor="#014D70"
             android:textSize="17sp" />
 
+        <TextView
+            android:id="@+id/textViewNotificationSet_visit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="Powiadomienie ustawione "
+            android:textColor="#014D70"
+            android:textColorHint="#77147A"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/checkBoxVisit1"
             android:layout_width="match_parent"
@@ -222,7 +236,8 @@
             android:buttonTint="#0375a8"
             android:text="Ustawić przypomnienie o wizycie?"
             android:textColor="#014D70"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/aaad"
